[gd_scene load_steps=18 format=3 uid="uid://4s05blamcfv7"]

[ext_resource type="Script" path="res://menu/scripts/select_map_scene.gd" id="1_ryw3e"]
[ext_resource type="Texture2D" uid="uid://c2obt07ot1ry4" path="res://menu/assets/BGpolos.png" id="1_yxebu"]
[ext_resource type="Texture2D" uid="uid://bqx5smaxdfaii" path="res://menu/assets/BGpilihstage.png" id="2_nigco"]
[ext_resource type="Texture2D" uid="uid://cn3ukk34l5ac8" path="res://menu/assets/Random Stage.png" id="3_jjjtq"]
[ext_resource type="Texture2D" uid="uid://bvuegg6ycbfjr" path="res://menu/assets/Fillmap.png" id="4_7ms08"]
[ext_resource type="Texture2D" uid="uid://ccvpuhdpheg3k" path="res://menu/assets/Dust-Background.png" id="4_yse0i"]
[ext_resource type="Texture2D" uid="uid://cwqj1pguy5xue" path="res://menu/assets/Snow-Background.png" id="5_8s8qd"]
[ext_resource type="Texture2D" uid="uid://dhaosjslfrx3b" path="res://menu/assets/Forest.png" id="5_jn0vw"]
[ext_resource type="Texture2D" uid="uid://bwovjhkqqem5i" path="res://menu/assets/Dust.png" id="6_h281m"]
[ext_resource type="Texture2D" uid="uid://c6m1cvh8ppg0e" path="res://menu/assets/Grassland-Background.png" id="6_yadvi"]
[ext_resource type="Texture2D" uid="uid://duhhottt5n7oa" path="res://menu/assets/Snow.png" id="7_updhs"]
[ext_resource type="Texture2D" uid="uid://dgllxe1cpu4fj" path="res://menu/assets/random.png" id="8_0rfmw"]
[ext_resource type="Texture2D" uid="uid://d157i26bm4x4g" path="res://menu/assets/next.png" id="9_8cl6a"]
[ext_resource type="StyleBox" uid="uid://5bgb1ps0cib8" path="res://menu/styles/invisible_color_button.tres" id="9_tamxg"]
[ext_resource type="Texture2D" uid="uid://dv7su0t0kwc5y" path="res://menu/assets/Start.png" id="10_5jgvq"]
[ext_resource type="StyleBox" uid="uid://ei7n6jxvwwhx" path="res://menu/styles/button_styles.tres" id="14_gnlmc"]
[ext_resource type="StyleBox" uid="uid://dkerwp5wxv4fy" path="res://menu/styles/button_hover_styles.tres" id="15_kal2c"]

[node name="SelectMapScene" type="Node2D"]
script = ExtResource("1_ryw3e")

[node name="BGpolos" type="Sprite2D" parent="."]
position = Vector2(576, 324.5)
scale = Vector2(0.6, 0.600926)
texture = ExtResource("1_yxebu")
metadata/_edit_lock_ = true

[node name="BGpilihstage" type="Sprite2D" parent="."]
position = Vector2(574.611, 324.5)
scale = Vector2(0.600636, 0.599074)
texture = ExtResource("2_nigco")
metadata/_edit_lock_ = true

[node name="Dust-background" type="Sprite2D" parent="." groups=["Stage Background"]]
visible = false
position = Vector2(584, 344)
scale = Vector2(0.307813, 0.311594)
texture = ExtResource("4_yse0i")

[node name="Snow-background" type="Sprite2D" parent="." groups=["Stage Background"]]
visible = false
position = Vector2(584.174, 345)
scale = Vector2(0.307065, 0.307971)
texture = ExtResource("5_8s8qd")

[node name="Grassland-background" type="Sprite2D" parent="." groups=["Stage Background"]]
visible = false
position = Vector2(582.391, 348.5)
scale = Vector2(0.30813, 0.307518)
texture = ExtResource("6_yadvi")

[node name="Timer" type="Timer" parent="."]

[node name="BackgroundColor" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -2.0
offset_right = 1176.0
offset_bottom = 690.0
color = Color(0.192157, 0.192157, 0.192157, 0.811765)

[node name="RandomStage" type="Sprite2D" parent="."]
position = Vector2(337, 259)
scale = Vector2(0.413534, 0.413534)
texture = ExtResource("3_jjjtq")

[node name="Random" type="RichTextLabel" parent="RandomStage"]
anchors_preset = -1
anchor_left = -0.309176
anchor_top = 0.0358239
anchor_right = 0.891623
anchor_bottom = 0.0358239
offset_left = -188.66
offset_top = -65.0037
offset_right = -132.66
offset_bottom = 71.9963
scale = Vector2(0.79, 0.79)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center] CHOOSE"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="Fillmap" type="Sprite2D" parent="."]
position = Vector2(576, 534)
scale = Vector2(0.581439, 0.581439)
texture = ExtResource("4_7ms08")

[node name="Button Forest" type="Button" parent="." groups=["StageSelection"]]
offset_left = 144.0
offset_top = 495.0
offset_right = 337.0
offset_bottom = 589.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("9_tamxg")
theme_override_styles/hover = ExtResource("9_tamxg")
theme_override_styles/pressed = ExtResource("9_tamxg")
theme_override_styles/focus = ExtResource("9_tamxg")

[node name="Forest" type="Sprite2D" parent="Button Forest"]
position = Vector2(96, 47)
scale = Vector2(0.531065, 0.531065)
texture = ExtResource("5_jn0vw")

[node name="FOREST" type="RichTextLabel" parent="Button Forest/Forest"]
offset_left = -166.0
offset_top = -147.0
offset_right = 177.0
offset_bottom = -98.0
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]FOREST"
fit_content = true

[node name="Button Dust" type="Button" parent="." groups=["StageSelection"]]
offset_left = 352.0
offset_top = 494.0
offset_right = 557.0
offset_bottom = 596.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("9_tamxg")
theme_override_styles/hover = ExtResource("9_tamxg")
theme_override_styles/pressed = ExtResource("9_tamxg")
theme_override_styles/focus = ExtResource("9_tamxg")

[node name="Dust" type="Sprite2D" parent="Button Dust"]
position = Vector2(103, 51.0001)
scale = Vector2(0.569527, 0.569527)
texture = ExtResource("6_h281m")

[node name="Dust" type="RichTextLabel" parent="Button Dust/Dust"]
offset_left = -167.0
offset_top = -142.0
offset_right = 179.0
offset_bottom = -93.0
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]DUST"
fit_content = true

[node name="Button Snow" type="Button" parent="." groups=["StageSelection"]]
offset_left = 569.0
offset_top = 494.0
offset_right = 785.0
offset_bottom = 599.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("9_tamxg")
theme_override_styles/hover = ExtResource("9_tamxg")
theme_override_styles/pressed = ExtResource("9_tamxg")
theme_override_styles/focus = ExtResource("9_tamxg")

[node name="Snow" type="Sprite2D" parent="Button Snow"]
position = Vector2(108, 53)
scale = Vector2(0.606509, 0.606509)
texture = ExtResource("7_updhs")

[node name="Snow" type="RichTextLabel" parent="Button Snow/Snow"]
offset_left = -163.0
offset_top = -140.0
offset_right = 176.0
offset_bottom = -91.0
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]SNOW"
fit_content = true

[node name="Button Random" type="Button" parent="." groups=["StageSelection"]]
offset_left = 802.0
offset_top = 496.0
offset_right = 1010.0
offset_bottom = 601.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("9_tamxg")
theme_override_styles/hover = ExtResource("9_tamxg")
theme_override_styles/pressed = ExtResource("9_tamxg")
theme_override_styles/focus = ExtResource("9_tamxg")

[node name="Random" type="Sprite2D" parent="Button Random"]
position = Vector2(104, 52)
scale = Vector2(0.588757, 0.588757)
texture = ExtResource("8_0rfmw")

[node name="Randowm" type="RichTextLabel" parent="Button Random/Random"]
offset_left = -165.0
offset_top = -139.0
offset_right = 177.0
offset_bottom = -90.0
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]RANDOM"
fit_content = true

[node name="Dificulty" type="RichTextLabel" parent="."]
offset_left = 746.0
offset_top = 137.0
offset_right = 943.0
offset_bottom = 186.0
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]DIFFICULTY"
fit_content = true

[node name="Difficulty Status" type="RichTextLabel" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 771.0
offset_top = 236.0
offset_right = 926.0
offset_bottom = 334.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.929412, 0.490196, 0.192157, 1)
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "NORMAL"
fit_content = true

[node name="Next Difficulty" type="Button" parent="."]
offset_left = 962.0
offset_top = 236.0
offset_right = 1005.0
offset_bottom = 284.0
flat = true

[node name="maju2" type="Sprite2D" parent="Next Difficulty"]
position = Vector2(21, 25)
scale = Vector2(0.793209, 0.79321)
texture = ExtResource("9_8cl6a")
flip_h = true

[node name="Prev Difficulty" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 687.0
offset_top = 238.0
offset_right = 734.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
flat = true

[node name="mundur" type="Sprite2D" parent="Prev Difficulty"]
position = Vector2(25, 22)
scale = Vector2(0.801887, 0.801887)
texture = ExtResource("9_8cl6a")

[node name="Button Next" type="Button" parent="."]
offset_left = 771.0
offset_top = 343.0
offset_right = 926.0
offset_bottom = 404.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("14_gnlmc")
theme_override_styles/hover = ExtResource("15_kal2c")
disabled = true
text = "Next"

[node name="NEXT" type="Sprite2D" parent="Button Next"]
visible = false
position = Vector2(78, 30)
scale = Vector2(0.637097, 0.637097)
texture = ExtResource("10_5jgvq")

[node name="next" type="RichTextLabel" parent="Button Next/NEXT"]
offset_left = -66.4303
offset_top = -35.2911
offset_right = 74.5697
offset_bottom = 33.7089
theme_override_font_sizes/normal_font_size = 50
text = "NEXT"
fit_content = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Button Forest" to="." method="_on_button_forest_pressed"]
[connection signal="pressed" from="Button Dust" to="." method="_on_button_dust_pressed"]
[connection signal="pressed" from="Button Snow" to="." method="_on_button_snow_pressed"]
[connection signal="pressed" from="Button Random" to="." method="_on_button_random_pressed"]
[connection signal="pressed" from="Next Difficulty" to="." method="_on_next_difficulty_pressed"]
[connection signal="pressed" from="Prev Difficulty" to="." method="_on_prev_difficulty_pressed"]
[connection signal="pressed" from="Button Next" to="." method="_on_button_next_pressed"]
